[workspace]
resolver = "2"

members = [
    "programs/lending-pool",
    "programs/loan-manager",
    "programs/collateral-vault",
    "programs/credit-scorer",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }