[package]
name = "credit-scorer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credit_scorer"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
thiserror = "2.0"
borsh = "1.5"
bs58 = "0.5"
ed25519-dalek = "1.0.1"  # Downgraded from 2.1